--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^5.5.6",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-image-view": "^2.0.12",
     "react-native-material-textfield": "^0.12.0",
     "react-native-sideswipe": "^1.4.2",
     "react-navigation": "^2.18.0"
